Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/Month_Rep_Target__c.object-meta.xml
<CustomObject>
    <description>SBE: EH Only - Part of the custom AOP reporting package developed by GSP from the UK. One of several custom objects this object is used to store each sales person&#39;s monthly base &amp; stretch quotas and then compare against their current sales funnel</description>
    <label>Month Rep Target</label>
    <nameField>
        <displayFormat>MRT - {00000}</displayFormat>
        <label>Month Rep Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month Rep Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>