Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Base_Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Base_Target_Achieved__c</fullName>
    <formula>IF(  Total_Opportunity_Amount__c  = 0, 0, Won_Revenue__c / Base_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Closed Won opportunities compared to Base Target for this rep this month</inlineHelpText>
    <label>Base Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>