Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Closed_Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount of Closed Lost opportunities for this rep this month.</inlineHelpText>
    <label>Closed Lost Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>