Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Commit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commit_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount of all Open opportunities for this rep due to close this month.</inlineHelpText>
    <label>Commit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>