Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Commit_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Commit_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Commit Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>