Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Forecast_Stretch_Target_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Stretch_Target_Achievement__c</fullName>
    <formula>IF (Total_Opportunity_Amount__c = 0, 0, (  Total_Forecast_Revenue__c  / Stretch_Target__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Closed Won and Commit opportunities compared to Stretch Target for this rep this month</inlineHelpText>
    <label>Forecast Stretch Target Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>