Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Legacy_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created_Date__c</fullName>
    <description>The record Created Date from the legacy ServiceMax org.</description>
    <label>Legacy Created Date</label>
    <type>DateTime</type>
</CustomField>