Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Legacy_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Name__c</fullName>
    <description>The record Name from the legacy ServiceMax org.</description>
    <label>Legacy Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>