Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/MRT__c.field-meta.xml
<CustomField>
    <fullName>MRT__c</fullName>
    <formula>Sales_Person__r.FirstName &amp;
&quot; &quot; &amp;
 Sales_Person__r.LastName &amp;
&quot;-&quot; &amp;
TEXT(Year__c) &amp;
&quot;-&quot; &amp;
RIGHT(TEXT(Month__c),3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRT</label>
    <type>Text</type>
</CustomField>