Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/fields/Opportunity_Count_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count_Win_Rate__c</fullName>
    <formula>IF(( Closed_Won_Opportunities__c = 0), 0, ( Closed_Won_Opportunities__c / ( Closed_Won_Opportunities__c + Closed_Lost_Opportunities__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Opportunity Count Win Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>