Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/listViews/All_MRTs.listView-meta.xml
<ListView>
    <fullName>All_MRTs</fullName>
    <columns>NAME</columns>
    <columns>Sales_Person__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Base_Target__c</columns>
    <columns>Base_Target_Achieved__c</columns>
    <columns>Commit_as_of_Base_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>All MRTs</label>
    <language>en_US</language>
    <sharedTo>
        <group>ARQ_000862</group>
    </sharedTo>
</ListView>