Perkin-UAT/force-app/main/default/objects/Month_Rep_Target__c/listViews/CA10_MRTs.listView-meta.xml
<ListView>
    <fullName>CA10_MRTs</fullName>
    <columns>NAME</columns>
    <columns>Sales_Person__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Base_Target__c</columns>
    <columns>Base_Target_Achieved__c</columns>
    <columns>Commit_as_of_Base_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>hey,freeman,chalhoub,hudson,pineault</value>
    </filters>
    <label>CA10 MRTs</label>
    <language>en_US</language>
</ListView>